api/manifests/admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "admission-webhook"
webhooks:
- name: "admission-webhook.ngrok-free.app"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    url: https://126e-183-87-179-129.ngrok-free.app/validate
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
